--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
   </div>
   </aside>
 
+  <section class="main-container">
+    <div class="cards-container">
+
+    </div>
+  </section>
+
   <script src="script.js"></script>
 </body>
 </html>
